--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "development": "ionic build --configuration=development && cordova build android",
-    "developmentrun": "ionic build --configuration=development && cordova run android"
+    "developmentrun": "ionic build --configuration=development && cordova run android --prod"
   },
   "private": true,
   "dependencies": {
@@ -32,6 +32,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.0.0",
     "cordova-plugin-apprate": "^1.4.0",
     "cordova-plugin-camera": "^4.1.0",
@@ -42,6 +43,7 @@
     "cordova-plugin-market": "^1.2.0",
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-x-socialsharing": "^5.6.0",
+    "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
     "rxjs": "~6.5.1",
@@ -96,7 +98,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
