--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "cordova-android": "^8.0.0",
     "cordova-plugin-apprate": "^1.4.0",
     "cordova-plugin-camera": "^4.1.0",
